# weatherstation-epaper

./: .env.example  .gitignore  .pylintrc  CLAUDE.md  README.md  generate_icons.py  icons.json  pyproject.toml  requirements.txt  translation.json  weatherstation.py  weatherstation.service
.github/workflows/: pylint.yml
tests/: test_weatherstation.py
