[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weatherstation-epaper"
version = "1.0.0"
description = "Raspberry Pi weather station with Waveshare e-Paper display"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "python-pirateweather>=1.3",
    "pillow>=10.0.0",
    "spidev>=3.8",
    "gpiozero>=2.0.1",
    "lgpio>=0.2.2.0",
]

[project.scripts]
weatherstation = "weatherstation:main"

[tool.setuptools]
py-modules = ["weatherstation"]

[tool.setuptools.package-data]
"*" = ["icons.json", "weathericons.ttf"]
